game_1630/app/static/app/style.css
/* ... */
.audio-player .controls .toggle-play.pause::before {
	position: absolute;
	top: 0;
	left: 0px;
	background: #fff;
	content: "";
	height: 15px;
	width: 3px;
}

.audio-player .controls .toggle-play.pause::after {
	position: absolute;
	top: 0;
	right: 8px;
	background: #fff;
	content: "";
	height: 15px;
	width: 3px;
}

.audio-player .timeline {
	background: #fff;
	width: 100%;
	position: relative;
	height: 0.375rem;
	cursor: pointer;
	border-radius: 0.25rem;
	margin: 0 1.125rem;
}

.audio-player .timeline .progress {
	background: #1C2C54;
	width: 0%;
	height: 100%;
	transition: 0.25s;
}

 /* audio style end */

 .newsletter p {
	max-width: 26.5625rem;
	font-size: 1.125rem;
	color: var(--textPrimary);
	margin-left: auto;
	margin-right: auto;
}

.newsletter form {
	margin-bottom: 7.5rem;
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-orient: vertical;
	-webkit-box-direction: normal;
	-ms-flex-direction: column;
	flex-direction: column;
	-webkit-box-align: center;
	-ms-flex-align: center;
	align-items: center;
}
.newsletter form .form-group {
	margin-bottom: 2rem;
	width: 32.5rem;
}
.newsletter form .form-group .form-control {
	padding: 1.0625rem 2.5rem;
	width: 100%;
	border-radius: 40px;
	background-color: #F5F5F5;
	font-size: 0.875rem;
	color: rgba(112, 112, 112, 1);
	border: 2px solid var(--primary);
	outline: none;
}
.pressKit > div {
	text-align: center;
	margin-top: 3.125rem;
}
.join-cummunity {
	display: flex;
	align-items: center;
	flex-direction: column;
}

.join-cummunity h4 {
	font-weight: 500;
	font-size: 1.5rem;
	color: var(--textSecondary);
	margin-bottom: 1rem;
}
.join-cummunity h5 {
	font-weight: 400;
	font-size: 1rem;
	color: var(--textPrimary);
	margin-bottom: 2.5rem;
}
.join-cummunity ul {
	display: flex;
	list-style: none;
}
.join-cummunity ul li:not(:last-child){
	margin-right: 2rem;
}
.join-cummunity span {
	margin-top: 2.5rem;
	display: block;
	font-size: 0.875rem;
	color: var(--textPrimary);
}

/* sign up modal style  */

.signup-modal-dialog {
	max-width: 37.5rem;
}
.signup-modal .signup-modal-content {
	position: relative;
	border-radius: 8px;
	border: 0;
	padding: 1.875rem 5rem;
}
.signup-modal .signup-modal-content .btn-close{
	position: absolute;
	top: 24px;
	right: 24px;
	box-shadow: none;
	outline: none;
}
.signup-modal .modal-body {
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
}
.signup-modal .modal-body h3 {
	font-size: 1.75rem;
	font-weight: 500;
	color: var(--textPrimary);
	margin: 1.5rem 0;
}
.signup-modal .modal-body p {
	font-size: 1rem;
	color: var(--textPrimary);
	margin-bottom: 2rem;
	text-align: center;
}
.signup-modal .modal-body form {
	display: flex;
	align-items: center;
	flex-direction: column;
	width: 100%;
}
.signup-modal .modal-body .form-group {
	margin-bottom: 2rem;
	width: 100%;
}
.signup-modal .modal-body .form-control {
	padding: 0.8125rem 2.5rem;
	width: 100%;
	border-radius: 40px;
	background-color: #fff;
	font-size: 0.875rem;
	color: rgba(31, 31, 31, 0.6);;
	border: 1px solid var(--primary);
	outline: none;
}
.signup-modal .modal-body .form-group .form-control::placeholder {
	text-align: center;
}
.signup-modal .modal-body form .btn{
	padding: 0.5625rem;
	width: 11.25rem;
}


/* carousal style */
.carousal-dialog {
    max-width: 80% !important;
    /*margin-top: 5%;*/
}

.carousel-image img {
  max-width: 100%;
  height: auto;
}

.carousel-icon {
	height: 200px !important;
	width: 100px !important;
   font-size: 25px;

}


/*@media screen and (min-width: 1900px) {*/
/*	.about .banner .content h1 {*/
/*		margin-top: 200px;*/
/*	}*/
/*}*/


@media screen and (max-device-width: 575px) {
	p {
		font-size: 24px !important;
		line-height: 2rem !important;
	}
	.content h1 {
		margin-top: 200px;
	}
	.content p {
		margin-top: 50px;
		font-size: 20px;
	}
	.content a {
		margin-top: 100px;
		font-size: 20px;
	}
	.content input {
		margin-top: 100px;
	}
	.about-game img{
		height: 250px;
		width: 400px;
	}
	.carousal-dialog {
		margin-top: 40%;
	}
	.about .banner .nav-bar ul li a {
		font-size: 1.5rem;
	}
	.about .banner .content h1 {
		font-size: 4rem;
		text-align: center;
		padding: 0 2rem;
	}
	.about .banner .content p {
		font-size: 1.5rem;
		padding: 0 2rem;
	}
	.about section {
		margin-left: 5rem;
		margin-right: 5rem;
	}
	.story .col-md-6 {
		width: 100% !important;
	}
	.story.order .col-md-6:first-child {
		order: 1;
	}
	.story .col-md-6 img {
		width: 100%;
		height: 100%;
	}
	.about section.about-game .story {
		row-gap: unset;
	}
	.about section.about-game .story h3 {
		font-size: 3rem;
		margin-top: 1rem;
	}
	.about section.about-game .story p {
		font-size: 1.5rem;
		margin-bottom: 2rem;
		line-height: 2.5rem;
	}
	.join-cummunity span {
		font-size: .8rem;
	}
	.join-cummunity h4 {
		font-size: 1.7rem;
	}
	.join-cummunity h5 {
		font-size: 1.2rem;
	}
	.form-group .form-control {
		font-size: 1.2rem !important;
	}
}
/* ... */

